--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,17 +3,17 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home"
+        android:icon="@drawable/selector_home"
         android:title="@string/title_home" />
 
     <item
         android:id="@+id/navigation_band"
-        android:icon="@drawable/ic_watch"
+        android:icon="@drawable/selector_band"
         android:title="@string/title_band" />
 
     <item
         android:id="@+id/navigation_profile"
-        android:icon="@drawable/ic_account"
+        android:icon="@drawable/selector_profile"
         android:title="@string/title_profile" />
 
 </menu>
