--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
+    <color name="primary_color">#89abe3</color>
+    <color name="primary_light_color">#bbddff</color>
+    <color name="primary_dark_color">#587cb1</color>
+    <color name="secondary_color">#fcf6f5</color>
+    <color name="secondary_light_color">#ffffff</color>
+    <color name="secondary_dark_color">#c9c3c2</color>
+    <color name="primary_text_color">#000000</color>
+    <color name="secondary_text_color">#000000</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#BA0000</color>
+    <color name="light_grey">#DEDEDE</color>
+    <color name="dark_grey">#AAAAAA</color>
 </resources>
