--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".app.auth.login.LoginActivity">
 
     <include
         android:id="@+id/login_form"
@@ -42,8 +42,6 @@
             android:textColor="@color/primary_color"
             android:textSize="12sp"/>
     </LinearLayout>
-
-
 
     <include
         android:id="@+id/layout_loading"
