--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,19 +7,19 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.example.heartratemonitoringapp.ui.home.HomeFragment"
+        android:name="com.example.heartratemonitoringapp.app.dashboard.home.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/navigation_band"
-        android:name="com.example.heartratemonitoringapp.ui.band.BandFragment"
+        android:name="com.example.heartratemonitoringapp.app.dashboard.band.BandFragment"
         android:label="@string/title_band"
         tools:layout="@layout/fragment_band" />
 
     <fragment
         android:id="@+id/navigation_profile"
-        android:name="com.example.heartratemonitoringapp.ui.profile.ProfileFragment"
+        android:name="com.example.heartratemonitoringapp.app.dashboard.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
 </navigation>
