--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="primary_color">#89abe3</color>
+    <color name="primary_color">#587cb1</color>
     <color name="primary_light_color">#bbddff</color>
-    <color name="primary_dark_color">#587cb1</color>
+    <color name="primary_dark_color">#89abe3</color>
     <color name="secondary_color">#fcf6f5</color>
     <color name="secondary_light_color">#ffffff</color>
     <color name="secondary_dark_color">#c9c3c2</color>
@@ -13,4 +13,5 @@
     <color name="red">#BA0000</color>
     <color name="light_grey">#DEDEDE</color>
     <color name="dark_grey">#AAAAAA</color>
+    <color name="yellow">#FEDE00</color>
 </resources>
