--- a/app/src/main/res/layout/layout_average.xml
+++ b/app/src/main/res/layout/layout_average.xml
@@ -8,6 +8,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="32dp"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -18,9 +19,9 @@
             android:id="@+id/card_avg_step"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="100dp"
-            android:layout_marginVertical="16dp"
             android:layout_marginHorizontal="64dp"
+            android:layout_marginVertical="16dp"
+            android:elevation="100dp"
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,16 +35,18 @@
                 <TextView
                     android:id="@+id/tv_avg_step_title"
                     style="@style/TextSemiBold"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="Langkah"
+                    android:text=" Langkah"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/ic_directions_walk"
+                    app:drawableTint="@color/orange"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -64,18 +67,22 @@
                     app:layout_constraintTop_toBottomOf="@+id/tv_avg_step_title"
                     tools:targetApi="o" />
 
-                <ImageView
-                    android:id="@+id/iv_avg_step_drawable"
+                <TextView
+                    android:id="@+id/tv_avg_step_unit"
+                    style="@style/TextSemiBold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:src="@drawable/ic_directions_walk"
+                    android:autoSizeTextType="uniform"
+                    android:gravity="center"
+                    android:text="Langkah"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/tv_avg_step_value"
-                    app:layout_constraintStart_toStartOf="@+id/tv_avg_step_value"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_avg_step_value"
-                    app:tint="@color/yellow"
-                    tools:ignore="ContentDescription" />
+                    tools:targetApi="o" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -85,9 +92,9 @@
             android:id="@+id/card_heart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:elevation="100dp"
-            android:layout_marginVertical="16dp"
             android:layout_marginHorizontal="64dp"
+            android:layout_marginVertical="16dp"
+            android:elevation="100dp"
             app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -100,17 +107,18 @@
 
                 <TextView
                     android:id="@+id/tv_avg_heart_title"
-                    style="@style/TextSemiBold"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
-                    android:text="Detak Jantung"
+                    android:text=" Detak Jantung"
                     android:textAlignment="center"
                     android:textColor="@color/black"
                     android:textSize="24sp"
                     android:textStyle="bold"
+                    app:drawableStartCompat="@drawable/ic_heart_filled"
+                    app:drawableTint="@color/red"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -131,18 +139,22 @@
                     app:layout_constraintTop_toBottomOf="@+id/tv_avg_heart_title"
                     tools:targetApi="o" />
 
-                <ImageView
-                    android:id="@+id/iv_avg_heart_drawable"
+                <TextView
+                    android:id="@+id/tv_avg_heart_unit"
+                    style="@style/TextSemiBold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginEnd="8dp"
                     android:layout_marginBottom="8dp"
-                    android:src="@drawable/ic_heart_filled"
+                    android:autoSizeTextType="uniform"
+                    android:gravity="center"
+                    android:text=" BPM"
                     app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="@+id/tv_avg_heart_value"
-                    app:layout_constraintStart_toStartOf="@+id/tv_avg_heart_value"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tv_avg_heart_value"
-                    app:tint="@color/red"
-                    tools:ignore="ContentDescription" />
+                    tools:targetApi="o" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
