--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,9 +10,13 @@
         <item name="colorSecondaryVariant">@color/secondary_dark_color</item>
         <item name="colorOnSecondary">@color/secondary_text_color</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:statusBarColor">@color/white_grey</item>
         <!-- Customize your theme here. -->
         <item name="android:forceDarkAllowed" tools:targetApi="q">false</item>
+    </style>
+
+    <style name="Theme.HeartRateMonitoringApp.Splash" parent="Theme.HeartRateMonitoringApp">
+        <item name="android:statusBarColor">@color/white</item>
     </style>
 
     <style name="TextRegular">
@@ -59,4 +63,11 @@
         <item name="hintTextColor">@color/primary_text_color</item>
         <item name="errorTextAppearance">@style/ErrorTextAppearance</item>
     </style>
+
+    <style name="Switch" parent="Theme.AppCompat.Light">
+        <item name="android:padding">12dp</item>
+        <item name="colorControlActivated">@color/primary_color</item>
+        <item name="android:colorForeground">#FF757575</item>
+    </style>
+
 </resources>
